<resources>
    <string name="app_name" translatable="false">MyQuiz</string>
    <string name="ok" translatable="false">OK</string>
    <string name="name">Name</string>
    <string name="email" translatable="false">Email</string>
    <string name="validate_name_error">Input 4-16 characters</string>
    <string name="validate_email_error">Input correct email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="start_button" translatable="false">Button</string>
    <string name="tv_question_number" translatable="false">TextView</string>
    <string name="tv_question_text" translatable="false">TextView</string>
    <string name="Answer">Please make a choice:</string>
    <string name="hint_question_number" translatable="false">Question:</string>
    <string name="b_sfq_next" translatable="false">Next</string>
    <string name="radiobutton_1" translatable="false">RadioButton</string>
    <string name="radiobutton_2" translatable="false">RadioButton</string>
    <string name="radiobutton_3" translatable="false">RadioButton</string>
    <string name="radiobutton_4" translatable="false">RadioButton</string>
    <string name="input_your_answer">Input your answer</string>
    <string name="your_result"> your result is: </string>
    //Menu
    <string name="logout" translatable="false">Logout</string>
    <string name="Exit">Exit</string>
    <string name="User_Info">User info</string>
    <string name="Prompt">Prompts</string>
    <string name="settings">Settings</string>
    <string name="User_name">User name</string>
    <string name="user_second_name">User second name</string>
    <string name="user_email">user_email</string>
    <string name="get_prompt">Сlick and hold to get prompt....</string>
    <string name="title_activity_question">QuestionActivity</string>


</resources>
