<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.UserInfoActivity">


    <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginStart="@dimen/start_margin"
            android:layout_marginTop="@dimen/top_margin"
            />

    <TextView
            android:text="@string/User_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_user_name"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@id/user_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/user_avatar"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginBottom="@dimen/bottom_margin"/>

    <TextView
            android:text="@string/user_second_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_user_second_name"
            app:layout_constraintTop_toBottomOf="@id/tv_user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/user_avatar"
            app:layout_constraintBottom_toTopOf="@id/textView3"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginBottom="@dimen/bottom_margin"/>

    <TextView
            android:text="@string/user_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_user_second_name"
            app:layout_constraintStart_toEndOf="@+id/user_avatar"
            app:layout_constraintEnd_toEndOf="parent"


            android:id="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.5"/>


</android.support.constraint.ConstraintLayout>